# ha-drink-tracker

./: .gitignore  README.md  repository.yaml
drink_tracker/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  build.yaml  config.yaml  pyproject.toml
drink_tracker/app/drink_tracker/: __init__.py  auth.py  bluebubbles.py  database.py  main.py  models.py  service.py  settings.py  supervisor.py
drink_tracker/app/drink_tracker/templates/: dashboard.html  login.html
drink_tracker/rootfs/etc/services.d/drink-tracker/: run
drink_tracker/tests/: test_service.py  test_settings.py
drink_tracker/translations/: en.yaml
