[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-drink-tracker"
version = "0.1.10"
description = "Home Assistant add-on for drink tracking over BlueBubbles"
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.10.4,<4",
  "fastapi>=0.115.0,<1",
  "httpx>=0.27.0,<1",
  "itsdangerous>=2.2.0,<3",
  "jinja2>=3.1.4,<4",
  "psycopg[binary]>=3.2.3,<4",
  "python-multipart>=0.0.12,<1",
  "sqlalchemy>=2.0.36,<3",
  "uvicorn[standard]>=0.32.0,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9",
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
